--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <script src="static/js/game.js"></script>
 
-    <div style="text-align:center;width:640px;" >
+    <div style="text-align:center;width:640px;margin: auto;" >
         <button onmousedown="move('up')" onmouseup="clearMove()" ontouchstart="move('up')">UP</button><br><br>
         <!-- <button onmousedown="move('left')" onmouseup="clearMove()" ontouchstart="move('left')">LEFT</button>
         <button onmousedown="move('right')" onmouseup="clearMove()" ontouchstart="move('right')">RIGHT</button><br><br> -->
